[package]
name = "xml-schema"
version = "0.1.0"
description = "Structure generator from XSD source file"
edition = "2018"
authors = ["Marc-Antoine Arnaud <maarnaud@media-io.com>"]
keywords = ["XML", "Schema", "XSD"]
license = "MIT"
repository = "https://github.com/media-io/xml-schema"
homepage = "https://github.com/media-io/xml-schema"
documentation = "https://docs.rs/xml_schema"
readme = "../README.md"
exclude = ["/tests"]

[dependencies]
xml-schema-derive = { version = "0.2.0", path = "../xml_schema_derive", optional = true }

[dev-dependencies]
log = "0.4"
xml-rs = "0.8"
xml-schema-derive = { version = "0.2.0", path = "../xml_schema_derive" }
yaserde_derive = { version = "0.8" }
yaserde = { version = "0.8" }
