[package]
name = "xml-schema"
version = "0.3.0"
description = "Structure generator from XSD source file"
edition = "2018"
authors = ["Marc-Antoine Arnaud <maarnaud@media-io.com>"]
keywords = ["XML", "Schema", "XSD"]
license = "MIT"
repository = "https://github.com/media-io/xml-schema"
homepage = "https://github.com/media-io/xml-schema"
documentation = "https://docs.rs/xml_schema"
readme = "../README.md"
exclude = ["/tests"]

[dependencies]
quick-xml = { version = "0.31.0", features = ["serialize"] }
serde = { version = "1.0.193", features = ["serde_derive"] }
xml-schema-derive = { version = "0.3.0", path = "../xml_schema_derive", optional = true }

[dev-dependencies]
log = "0.4"
xml-rs = "0.8"
xml-schema-derive = { version = "0.3.0", path = "../xml_schema_derive" }
yaserde_derive = { version = "0.9" }
yaserde = { version = "0.9" }
