[package]
name = "xml-schema"
version = "0.3.0"
description = "Structure generator from XSD source file"
edition = "2018"
authors = ["Marc-Antoine Arnaud <maarnaud@media-io.com>"]
keywords = ["XML", "Schema", "XSD"]
license = "MIT"
repository = "https://github.com/media-io/xml-schema"
homepage = "https://github.com/media-io/xml-schema"
documentation = "https://docs.rs/xml_schema"
readme = "../README.md"
exclude = ["/tests"]

[dependencies]
xml-rs = "0.8"
yaserde_derive = { version = "0.9" }
yaserde = { version = "0.9" }
log = "0.4"
reqwest = { version = "0.11", default-features = false, features = ["blocking"] }

[dev-dependencies]
