[package]
name = "xml-schema-derive"
version = "0.0.1"
description = "Structure generator from XSD source file"
edition = "2018"
authors = ["Marc-Antoine Arnaud <maarnaud@media-io.com>"]
keywords = ["XML", "Schema", "XSD"]
license = "MIT"
repository = "https://github.com/media-io/xml_schema_derive"
homepage = "https://github.com/media-io/xml_schema_derive"
documentation = "https://docs.rs/xml_schema"
readme = "../README.md"

[lib]
name = "xml_schema_derive"
proc-macro = true

[dependencies]
log = "0.4"
proc-macro2 = "1.0"
quote = "1.0"
Inflector = "0.11"
syn = { version = "1.0", features = ["visit", "extra-traits"] }
xml-rs = "0.8"
yaserde_derive = { version = "0.3" }
yaserde = { version = "0.3" }
