[package]
name = "xml-schema-derive"
version = "0.1.0"
description = "Structure generator from XSD source file"
edition = "2018"
authors = ["Marc-Antoine Arnaud <maarnaud@media-io.com>"]
keywords = ["XML", "Schema", "XSD"]
license = "MIT"
repository = "https://github.com/media-io/xml-schema"
homepage = "https://github.com/media-io/xml-schema"
documentation = "https://docs.rs/xml_schema"
readme = "../README.md"

[lib]
name = "xml_schema_derive"
proc-macro = true

[features]
default = ["reqwest/default-tls"]

[dependencies]
heck = "0.3.1"
log = "0.4"
proc-macro2 = "1.0"
quote = "1.0"
reqwest = { version = "0.11", default-features = false, features = ["blocking"] }
simple_logger = "1.6"
syn = { version = "1.0", features = ["visit", "extra-traits"] }
xml-rs = "0.8"
yaserde_derive = { version = "0.8" }
yaserde = { version = "0.8" }
